Fixed bug
- Fixed a bug where on first load or hard-reload, the page would have 2 scrollbars due to both the `HTML` and `body` having the `overflow-x: hidden` CSS attribute. Fixed by removing the `HTML` from the CSS rule. [Line 15]

--- a/css/horizontal_timeline.2.0.css
+++ b/css/horizontal_timeline.2.0.css
@@ -12,7 +12,6 @@ Licensed under the MIT license
 Docs at http://horizontal-timeline.ycodetech.co.uk
 
 -------------------------------- */
-html, 
 body {
 	/* Stop horizontal scrollbar from appearing/disappearing when the content slides across and changes.*/
 	overflow-x: hidden;
